# yokai-over80

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
dict/: README.md  roman_jp.txt
python/: playground.ipynb
src/: algo.rs  chars.rs  filter.rs  hasher.rs  lib.rs  main.rs  searcher.rs
