[package]
name = "yokai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
array-init = "2.0.0"
clap = "2.34.0"
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true # for performance profiler

[[bench]]
name = "my_benchmark"
harness = false