[package]
edition = "2021"
name = "yokai"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
array-init = "2.0.0"
clap = {version = "3.0.0", features = ["derive"]}
itertools = "0.10.2"
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true # for performance profiler

[[bench]]
harness = false
name = "my_benchmark"
